Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_uninitialized.flow
program bad_uninitialized

stdin : stdin.text()
one : int
